just pushing everything up

--- a/Transliteration.ipynb
+++ b/Transliteration.ipynb
@@ -2749,6 +2749,123 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Requirement already satisfied: keras in /Users/soma/.pyenv/versions/3.6.8/lib/python3.6/site-packages (2.3.1)\n",
+      "Requirement already satisfied: numpy>=1.9.1 in /Users/soma/.pyenv/versions/3.6.8/lib/python3.6/site-packages (from keras) (1.17.0)\n",
+      "Requirement already satisfied: keras-preprocessing>=1.0.5 in /Users/soma/.pyenv/versions/3.6.8/lib/python3.6/site-packages (from keras) (1.1.0)\n",
+      "Requirement already satisfied: keras-applications>=1.0.6 in /Users/soma/.pyenv/versions/3.6.8/lib/python3.6/site-packages (from keras) (1.0.8)\n",
+      "Requirement already satisfied: h5py in /Users/soma/.pyenv/versions/3.6.8/lib/python3.6/site-packages (from keras) (2.10.0)\n",
+      "Requirement already satisfied: six>=1.9.0 in /Users/soma/.pyenv/versions/3.6.8/lib/python3.6/site-packages (from keras) (1.12.0)\n",
+      "Requirement already satisfied: scipy>=0.14 in /Users/soma/.pyenv/versions/3.6.8/lib/python3.6/site-packages (from keras) (1.4.1)\n",
+      "Requirement already satisfied: pyyaml in /Users/soma/.pyenv/versions/3.6.8/lib/python3.6/site-packages (from keras) (5.1.2)\n",
+      "\u001b[33mWARNING: You are using pip version 19.2.3, however version 20.0.2 is available.\n",
+      "You should consider upgrading via the 'pip install --upgrade pip' command.\u001b[0m\n",
+      "Collecting tensorflow\n",
+      "  Using cached https://files.pythonhosted.org/packages/73/a0/7f9d97268fa5aabbad788f5f0b52c00f615253d303a311b0c56a1a1fbc2a/tensorflow-2.1.0-cp36-cp36m-macosx_10_11_x86_64.whl\n",
+      "Requirement already satisfied: wheel>=0.26; python_version >= \"3\" in /Users/soma/.pyenv/versions/3.6.8/lib/python3.6/site-packages (from tensorflow) (0.33.4)\n",
+      "Collecting wrapt>=1.11.1 (from tensorflow)\n",
+      "  Downloading https://files.pythonhosted.org/packages/82/f7/e43cefbe88c5fd371f4cf0cf5eb3feccd07515af9fd6cf7dbf1d1793a797/wrapt-1.12.1.tar.gz\n",
+      "Requirement already satisfied: scipy==1.4.1; python_version >= \"3\" in /Users/soma/.pyenv/versions/3.6.8/lib/python3.6/site-packages (from tensorflow) (1.4.1)\n",
+      "Requirement already satisfied: keras-applications>=1.0.8 in /Users/soma/.pyenv/versions/3.6.8/lib/python3.6/site-packages (from tensorflow) (1.0.8)\n",
+      "Requirement already satisfied: protobuf>=3.8.0 in /Users/soma/.pyenv/versions/3.6.8/lib/python3.6/site-packages (from tensorflow) (3.11.2)\n",
+      "Collecting gast==0.2.2 (from tensorflow)\n",
+      "Requirement already satisfied: numpy<2.0,>=1.16.0 in /Users/soma/.pyenv/versions/3.6.8/lib/python3.6/site-packages (from tensorflow) (1.17.0)\n",
+      "Requirement already satisfied: grpcio>=1.8.6 in /Users/soma/.pyenv/versions/3.6.8/lib/python3.6/site-packages (from tensorflow) (1.28.1)\n",
+      "Requirement already satisfied: keras-preprocessing>=1.1.0 in /Users/soma/.pyenv/versions/3.6.8/lib/python3.6/site-packages (from tensorflow) (1.1.0)\n",
+      "Collecting google-pasta>=0.1.6 (from tensorflow)\n",
+      "\u001b[?25l  Downloading https://files.pythonhosted.org/packages/a3/de/c648ef6835192e6e2cc03f40b19eeda4382c49b5bafb43d88b931c4c74ac/google_pasta-0.2.0-py3-none-any.whl (57kB)\n",
+      "\u001b[K     |████████████████████████████████| 61kB 4.2MB/s eta 0:00:011\n",
+      "\u001b[?25hCollecting opt-einsum>=2.3.2 (from tensorflow)\n",
+      "\u001b[?25l  Downloading https://files.pythonhosted.org/packages/63/a5/e6c07b08b934831ccb8c98ee335e66b7761c5754ee3cabfe4c11d0b1af28/opt_einsum-3.2.1-py3-none-any.whl (63kB)\n",
+      "\u001b[K     |████████████████████████████████| 71kB 10.2MB/s eta 0:00:01\n",
+      "\u001b[?25hCollecting termcolor>=1.1.0 (from tensorflow)\n",
+      "Collecting tensorflow-estimator<2.2.0,>=2.1.0rc0 (from tensorflow)\n",
+      "  Using cached https://files.pythonhosted.org/packages/18/90/b77c328a1304437ab1310b463e533fa7689f4bfc41549593056d812fab8e/tensorflow_estimator-2.1.0-py2.py3-none-any.whl\n",
+      "Requirement already satisfied: astor>=0.6.0 in /Users/soma/.pyenv/versions/3.6.8/lib/python3.6/site-packages (from tensorflow) (0.8.1)\n",
+      "Collecting tensorboard<2.2.0,>=2.1.0 (from tensorflow)\n",
+      "\u001b[?25l  Downloading https://files.pythonhosted.org/packages/d9/41/bbf49b61370e4f4d245d4c6051dfb6db80cec672605c91b1652ac8cc3d38/tensorboard-2.1.1-py3-none-any.whl (3.8MB)\n",
+      "\u001b[K     |████████████████████████████████| 3.9MB 11.5MB/s eta 0:00:01\n",
+      "\u001b[?25hRequirement already satisfied: six>=1.12.0 in /Users/soma/.pyenv/versions/3.6.8/lib/python3.6/site-packages (from tensorflow) (1.12.0)\n",
+      "Requirement already satisfied: absl-py>=0.7.0 in /Users/soma/.pyenv/versions/3.6.8/lib/python3.6/site-packages (from tensorflow) (0.9.0)\n",
+      "Requirement already satisfied: h5py in /Users/soma/.pyenv/versions/3.6.8/lib/python3.6/site-packages (from keras-applications>=1.0.8->tensorflow) (2.10.0)\n",
+      "Requirement already satisfied: setuptools in /Users/soma/.pyenv/versions/3.6.8/lib/python3.6/site-packages (from protobuf>=3.8.0->tensorflow) (41.0.1)\n",
+      "Requirement already satisfied: requests<3,>=2.21.0 in /Users/soma/.pyenv/versions/3.6.8/lib/python3.6/site-packages (from tensorboard<2.2.0,>=2.1.0->tensorflow) (2.21.0)\n",
+      "Requirement already satisfied: google-auth-oauthlib<0.5,>=0.4.1 in /Users/soma/.pyenv/versions/3.6.8/lib/python3.6/site-packages (from tensorboard<2.2.0,>=2.1.0->tensorflow) (0.4.1)\n",
+      "Requirement already satisfied: markdown>=2.6.8 in /Users/soma/.pyenv/versions/3.6.8/lib/python3.6/site-packages (from tensorboard<2.2.0,>=2.1.0->tensorflow) (3.2.1)\n",
+      "Requirement already satisfied: werkzeug>=0.11.15 in /Users/soma/.pyenv/versions/3.6.8/lib/python3.6/site-packages (from tensorboard<2.2.0,>=2.1.0->tensorflow) (0.16.0)\n",
+      "Requirement already satisfied: google-auth<2,>=1.6.3 in /Users/soma/.pyenv/versions/3.6.8/lib/python3.6/site-packages (from tensorboard<2.2.0,>=2.1.0->tensorflow) (1.14.0)\n",
+      "Requirement already satisfied: certifi>=2017.4.17 in /Users/soma/.pyenv/versions/3.6.8/lib/python3.6/site-packages (from requests<3,>=2.21.0->tensorboard<2.2.0,>=2.1.0->tensorflow) (2019.6.16)\n",
+      "Requirement already satisfied: idna<2.9,>=2.5 in /Users/soma/.pyenv/versions/3.6.8/lib/python3.6/site-packages (from requests<3,>=2.21.0->tensorboard<2.2.0,>=2.1.0->tensorflow) (2.8)\n",
+      "Requirement already satisfied: urllib3<1.25,>=1.21.1 in /Users/soma/.pyenv/versions/3.6.8/lib/python3.6/site-packages (from requests<3,>=2.21.0->tensorboard<2.2.0,>=2.1.0->tensorflow) (1.24.3)\n",
+      "Requirement already satisfied: chardet<3.1.0,>=3.0.2 in /Users/soma/.pyenv/versions/3.6.8/lib/python3.6/site-packages (from requests<3,>=2.21.0->tensorboard<2.2.0,>=2.1.0->tensorflow) (3.0.4)\n",
+      "Requirement already satisfied: requests-oauthlib>=0.7.0 in /Users/soma/.pyenv/versions/3.6.8/lib/python3.6/site-packages (from google-auth-oauthlib<0.5,>=0.4.1->tensorboard<2.2.0,>=2.1.0->tensorflow) (1.3.0)\n",
+      "Requirement already satisfied: pyasn1-modules>=0.2.1 in /Users/soma/.pyenv/versions/3.6.8/lib/python3.6/site-packages (from google-auth<2,>=1.6.3->tensorboard<2.2.0,>=2.1.0->tensorflow) (0.2.8)\n",
+      "Requirement already satisfied: rsa<4.1,>=3.1.4 in /Users/soma/.pyenv/versions/3.6.8/lib/python3.6/site-packages (from google-auth<2,>=1.6.3->tensorboard<2.2.0,>=2.1.0->tensorflow) (3.4.2)\n",
+      "Requirement already satisfied: cachetools<5.0,>=2.0.0 in /Users/soma/.pyenv/versions/3.6.8/lib/python3.6/site-packages (from google-auth<2,>=1.6.3->tensorboard<2.2.0,>=2.1.0->tensorflow) (4.0.0)\n",
+      "Requirement already satisfied: oauthlib>=3.0.0 in /Users/soma/.pyenv/versions/3.6.8/lib/python3.6/site-packages (from requests-oauthlib>=0.7.0->google-auth-oauthlib<0.5,>=0.4.1->tensorboard<2.2.0,>=2.1.0->tensorflow) (3.1.0)\n",
+      "Requirement already satisfied: pyasn1<0.5.0,>=0.4.6 in /Users/soma/.pyenv/versions/3.6.8/lib/python3.6/site-packages (from pyasn1-modules>=0.2.1->google-auth<2,>=1.6.3->tensorboard<2.2.0,>=2.1.0->tensorflow) (0.4.7)\n",
+      "Building wheels for collected packages: wrapt\n",
+      "  Building wheel for wrapt (setup.py) ... \u001b[?25ldone\n",
+      "\u001b[?25h  Created wheel for wrapt: filename=wrapt-1.12.1-cp36-cp36m-macosx_10_14_x86_64.whl size=32350 sha256=5836964cccab19f7919f8225557b3e0f490caf5a343eda0ed641aeed91639793\n",
+      "  Stored in directory: /Users/soma/Library/Caches/pip/wheels/b1/c2/ed/d62208260edbd3fa7156545c00ef966f45f2063d0a84f8208a\n",
+      "Successfully built wrapt\n",
+      "Installing collected packages: wrapt, gast, google-pasta, opt-einsum, termcolor, tensorflow-estimator, tensorboard, tensorflow\n"
+     ]
+    }
+   ],
+   "source": [
+    "!pip install keras\n",
+    "!pip install tensorflow"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 520,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Using TensorFlow backend.\n"
+     ]
+    },
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'tensorflow'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-520-159b3dbaf7c7>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mnumpy\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mpandas\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mpd\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m \u001b[0;32mfrom\u001b[0m \u001b[0mkeras\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mutils\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mto_categorical\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      4\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0mkeras\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpreprocessing\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msequence\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mpad_sequences\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0mkeras\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmodels\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mSequential\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/.pyenv/versions/3.6.8/lib/python3.6/site-packages/keras/__init__.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0m__future__\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mabsolute_import\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m \u001b[0;32mfrom\u001b[0m \u001b[0;34m.\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mutils\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      4\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0;34m.\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mactivations\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0;34m.\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mapplications\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/.pyenv/versions/3.6.8/lib/python3.6/site-packages/keras/utils/__init__.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0;34m.\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mdata_utils\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0;34m.\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mio_utils\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 6\u001b[0;31m \u001b[0;32mfrom\u001b[0m \u001b[0;34m.\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mconv_utils\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      7\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0;34m.\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mlosses_utils\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      8\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0;34m.\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mmetrics_utils\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/.pyenv/versions/3.6.8/lib/python3.6/site-packages/keras/utils/conv_utils.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      7\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0msix\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmoves\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mrange\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      8\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mnumpy\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 9\u001b[0;31m \u001b[0;32mfrom\u001b[0m \u001b[0;34m.\u001b[0m\u001b[0;34m.\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mbackend\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mK\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     10\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     11\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/.pyenv/versions/3.6.8/lib/python3.6/site-packages/keras/backend/__init__.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0;32mfrom\u001b[0m \u001b[0;34m.\u001b[0m\u001b[0mload_backend\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mepsilon\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0;34m.\u001b[0m\u001b[0mload_backend\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mset_epsilon\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0;34m.\u001b[0m\u001b[0mload_backend\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mfloatx\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0;34m.\u001b[0m\u001b[0mload_backend\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mset_floatx\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0;34m.\u001b[0m\u001b[0mload_backend\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mcast_to_floatx\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/.pyenv/versions/3.6.8/lib/python3.6/site-packages/keras/backend/load_backend.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     88\u001b[0m \u001b[0;32melif\u001b[0m \u001b[0m_BACKEND\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;34m'tensorflow'\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     89\u001b[0m     \u001b[0msys\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mstderr\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mwrite\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'Using TensorFlow backend.\\n'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 90\u001b[0;31m     \u001b[0;32mfrom\u001b[0m \u001b[0;34m.\u001b[0m\u001b[0mtensorflow_backend\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0;34m*\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     91\u001b[0m \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     92\u001b[0m     \u001b[0;31m# Try and load external backend.\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/.pyenv/versions/3.6.8/lib/python3.6/site-packages/keras/backend/tensorflow_backend.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0m__future__\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mprint_function\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 5\u001b[0;31m \u001b[0;32mimport\u001b[0m \u001b[0mtensorflow\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mtf\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      6\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0mtensorflow\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpython\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0meager\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mcontext\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      7\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0mtensorflow\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpython\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mframework\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mdevice\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mtfdev\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'tensorflow'"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "from keras.utils import to_categorical\n",
+    "from keras.preprocessing.sequence import pad_sequences\n",
+    "from keras.models import Sequential\n",
+    "from keras.layers import LSTM, Dense, GRU, Embedding\n",
+    "from keras.callbacks import EarlyStopping, ModelCheckpoint\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": []
   }
