add early breakout

--- a/tensorflow.ipynb
+++ b/tensorflow.ipynb
@@ -198,8 +198,8 @@
      "text": [
       "0.00014832262925360256\n",
       "9.077041126207062e-06\n",
-      "CPU times: user 40.3 ms, sys: 3.8 ms, total: 44.1 ms\n",
-      "Wall time: 42 ms\n"
+      "CPU times: user 36.4 ms, sys: 3.09 ms, total: 39.5 ms\n",
+      "Wall time: 48.6 ms\n"
      ]
     }
    ],
@@ -426,7 +426,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -434,14 +434,19 @@
     "\n",
     "# Receive a list like ['ti', 'be', 'bi', 'ni']\n",
     "# Tries out each Ethiopic option, returns top n most likely\n",
-    "def get_top_sequences(breakdown, n=3):\n",
+    "def get_top_sequences(breakdown, n=3, lower_bound=None):\n",
     "    eth_poss = [lat_eth[latin] for latin in breakdown]\n",
     "\n",
     "    current = eth_poss[0]\n",
     "    for next_options in eth_poss[1:]:\n",
     "        top = best_next_steps(current, next_options, n)\n",
-    "        current = [option[0] for option in top]\n",
-    "    \n",
+    "\n",
+    "        # Only keep ones above lower score bound\n",
+    "        # if you want to use them all, lower_bound should be None\n",
+    "        if lower_bound != None:\n",
+    "            current = [option[0] for option in top if option[1] > lower_bound]\n",
+    "        else:\n",
+    "            current = [option[0] for option in top]\n",
     "    return top\n",
     "\n",
     "# Takes a list of potential breakdowns\n",
@@ -450,9 +455,17 @@
     "def get_top_sequences_all(breakdowns, limit=5, n=3):\n",
     "    tops = []\n",
     "    \n",
+    "    # shorter breakdowns go first\n",
+    "    breakdowns = sorted(breakdowns, key=lambda breakdown: len(breakdowns))\n",
+    "\n",
+    "    lower_bound = 0\n",
     "    for breakdown in tqdm_notebook(breakdowns):\n",
-    "        top = get_top_sequences(breakdown, n)\n",
-    "        tops.extend(top)\n",
+    "        top = get_top_sequences(breakdown, n, lower_bound=lower_bound)\n",
+    "        if len(top) > 0:\n",
+    "            worst_score = top[-1][1]\n",
+    "            if worst_score > lower_bound:\n",
+    "                lower_bound = worst_score\n",
+    "            tops.extend(top)\n",
     "        \n",
     "    return sorted(tops, key=lambda pair: pair[1], reverse=True)[:limit]\n",
     "\n",
@@ -471,7 +484,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
@@ -495,7 +508,7 @@
        " ['ti', 'be', 'bi', 'ni']]"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -507,7 +520,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
@@ -519,7 +532,7 @@
        " ['ሂ', 'ህ', 'ሒ', 'ሕ', 'ኂ', 'ኅ', 'ኺ', 'ኽ', 'ⷒ']]"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -533,7 +546,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
@@ -542,7 +555,7 @@
        "0.0001135805060129536"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 53,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -554,7 +567,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
@@ -565,7 +578,7 @@
        " ('ጥበቢ', 1.7590755614174365e-05)]"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 54,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -581,7 +594,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
@@ -601,7 +614,7 @@
        " ('እንድህ', 1.3919852955185693e-07)]"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 55,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -614,7 +627,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
@@ -627,7 +640,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e442856337f4498e9a2d9e383be38c91",
+       "model_id": "f8ed7637cbb24a05b0821dccff41fd4c",
        "version_major": 2,
        "version_minor": 0
       },
@@ -660,7 +673,7 @@
        " ('እኚዽእህ', 1.4182976173606308e-10)]"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 56,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -673,13 +686,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ab4124591b2d46d380d40bbe837cf050",
+       "model_id": "c7055bddba1c45e09a4be3f0044c2926",
        "version_major": 2,
        "version_minor": 0
       },
@@ -707,7 +720,7 @@
        " ('ትእበንን', 4.110394925480327e-09)]"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 57,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -718,13 +731,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "88b68b3512724f18ba1e95c4fd3953a9",
+       "model_id": "5013ddaf624046f6b8f1c7b4a554e7b4",
        "version_major": 2,
        "version_minor": 0
       },
@@ -752,7 +765,7 @@
        " ('ያምዣደርጓትኸዊንዕ', 2.3625757615350668e-23)]"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 58,
      "metadata": {},
      "output_type": "execute_result"
     }
