option to adjust for length

--- a/tensorflow.ipynb
+++ b/tensorflow.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 8,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 9,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -105,7 +105,7 @@
        "0.00088863523"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -189,17 +189,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Adjusted for length:\n",
+      "0.01510776486247778\n",
+      "0.0004449678877608077\n",
+      "2.7231123378621187e-05\n",
+      "\n",
+      "Not adjusted for length:\n",
+      "0.00755388243123889\n",
       "0.00014832262925360256\n",
       "9.077041126207062e-06\n",
-      "CPU times: user 36.4 ms, sys: 3.09 ms, total: 39.5 ms\n",
-      "Wall time: 48.6 ms\n"
+      "CPU times: user 10.2 ms, sys: 7.56 ms, total: 17.8 ms\n",
+      "Wall time: 18.7 ms\n"
      ]
     }
    ],
@@ -208,9 +215,9 @@
     "\n",
     "cached = {}\n",
     "\n",
-    "def text_proba(text):\n",
+    "def text_proba(text, length_adj=False):\n",
     "    # Check the cache\n",
-    "    cache_key = text\n",
+    "    cache_key = text + (\"-adj\" if length_adj else \"-unadj\")\n",
     "    if cache_key in cached.keys():\n",
     "        return cached[cache_key]\n",
     "\n",
@@ -220,11 +227,24 @@
     "        base_str = text[:i]\n",
     "        next_char = text[i]\n",
     "        proba = proba * continuation_proba(base_str, next_char)\n",
+    "\n",
+    "    # Adjust for length\n",
+    "    if length_adj:\n",
+    "        proba = len(text) * proba\n",
+    "\n",
+    "    # Store in cache\n",
     "    cached[cache_key] = proba\n",
     "    return proba\n",
     "\n",
-    "print(text_proba(\"ጭምቅ\"))\n",
-    "print(text_proba(\"ጭምኢ\"))"
+    "print(\"Adjusted for length:\")\n",
+    "print(text_proba(\"ጭም\", length_adj=True))\n",
+    "print(text_proba(\"ጭምቅ\", length_adj=True))\n",
+    "print(text_proba(\"ጭምኢ\", length_adj=True))\n",
+    "\n",
+    "print(\"\\nNot adjusted for length:\")\n",
+    "print(text_proba(\"ጭም\", length_adj=False))\n",
+    "print(text_proba(\"ጭምቅ\", length_adj=False))\n",
+    "print(text_proba(\"ጭምኢ\", length_adj=False))"
    ]
   },
   {
@@ -250,7 +270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -313,7 +333,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -337,7 +357,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -353,7 +373,7 @@
        " ['i', 'ni', 'di', 'hi']]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -383,7 +403,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -426,7 +446,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -484,7 +504,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -508,7 +528,7 @@
        " ['ti', 'be', 'bi', 'ni']]"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -520,7 +540,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -532,7 +552,7 @@
        " ['ሂ', 'ህ', 'ሒ', 'ሕ', 'ኂ', 'ኅ', 'ኺ', 'ኽ', 'ⷒ']]"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -546,16 +566,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.0001135805060129536"
+       "0.0003407415180388608"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -567,18 +587,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[('ጥበብ', 0.0001135805060129536),\n",
-       " ('ጥብብ', 5.570733065839986e-05),\n",
-       " ('ጥበቢ', 1.7590755614174365e-05)]"
+       "[('ጥበብ', 0.0003407415180388608),\n",
+       " ('ጥብብ', 0.00016712199197519957),\n",
+       " ('ጥበቢ', 5.2772266842523096e-05)]"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -594,7 +614,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -607,14 +627,14 @@
     {
      "data": {
       "text/plain": [
-       "[('እኚዲህ', 3.228183081067021e-07),\n",
-       " ('እንዲህ', 2.692246230842964e-07),\n",
-       " ('እኚድህ', 1.6690833582038836e-07),\n",
-       " ('እኚፂህ', 1.57611673325971e-07),\n",
-       " ('እንድህ', 1.3919852955185693e-07)]"
+       "[('እኚዲህ', 1.2912732324268084e-06),\n",
+       " ('እንዲህ', 1.0768984923371857e-06),\n",
+       " ('እኚድህ', 6.676333432815534e-07),\n",
+       " ('እኚፂህ', 6.30446693303884e-07),\n",
+       " ('እንድህ', 5.567941182074277e-07)]"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -627,7 +647,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -640,7 +660,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f8ed7637cbb24a05b0821dccff41fd4c",
+       "model_id": "e723ee2deec44952a55c9da847253bdb",
        "version_major": 2,
        "version_minor": 0
       },
@@ -661,19 +681,19 @@
     {
      "data": {
       "text/plain": [
-       "[('እኚዲህ', 3.228183081067021e-07),\n",
-       " ('እንዲህ', 2.692246230842964e-07),\n",
-       " ('እኚድህ', 1.6690833582038836e-07),\n",
-       " ('እኚዲህኢ', 2.3856345637625673e-10),\n",
-       " ('እኚዲህእ', 2.3244859594548903e-10),\n",
-       " ('እንዲህኢ', 1.9895760250176246e-10),\n",
-       " ('እንኢዲህ', 1.9895754405773796e-10),\n",
-       " ('እንእዲህ', 1.9385786228808685e-10),\n",
-       " ('እኚዽኢህ', 1.45560695875896e-10),\n",
-       " ('እኚዽእህ', 1.4182976173606308e-10)]"
+       "[('እኚዲህ', 1.2912732324268084e-06),\n",
+       " ('እንዲህ', 1.0768984923371857e-06),\n",
+       " ('እኚድህ', 6.676333432815534e-07),\n",
+       " ('እኚዲህኢ', 1.1928172818812837e-09),\n",
+       " ('እኚዲህእ', 1.1622429797274452e-09),\n",
+       " ('እንዲህኢ', 9.947880125088124e-10),\n",
+       " ('እንኢዲህ', 9.947877202886898e-10),\n",
+       " ('እንእዲህ', 9.692893114404342e-10),\n",
+       " ('እኚዽኢህ', 7.2780347937948e-10),\n",
+       " ('እኚዽእህ', 7.091488086803154e-10)]"
       ]
      },
-     "execution_count": 56,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -686,13 +706,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c7055bddba1c45e09a4be3f0044c2926",
+       "model_id": "17ae0e2898544947a95d3e963d02d248",
        "version_major": 2,
        "version_minor": 0
       },
@@ -713,14 +733,14 @@
     {
      "data": {
       "text/plain": [
-       "[('ትበንን', 2.4012266244509255e-07),\n",
-       " ('ጥበንን', 1.2694991862853193e-07),\n",
-       " ('ትበንኚ', 9.789369922205556e-08),\n",
-       " ('ትበንእን', 4.110395324151776e-09),\n",
-       " ('ትእበንን', 4.110394925480327e-09)]"
+       "[('ትበንን', 9.604906497803702e-07),\n",
+       " ('ጥበንን', 5.077996745141277e-07),\n",
+       " ('ትበንኚ', 3.9157479688822224e-07),\n",
+       " ('ትበንእን', 2.055197662075888e-08),\n",
+       " ('ትእበንን', 2.0551974627401634e-08)]"
       ]
      },
-     "execution_count": 57,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -731,13 +751,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "5013ddaf624046f6b8f1c7b4a554e7b4",
+       "model_id": "accc524e44014f8ca9f32fd1990f00d2",
        "version_major": 2,
        "version_minor": 0
       },
@@ -765,7 +785,7 @@
        " ('ያምዣደርጓትኸዊንዕ', 2.3625757615350668e-23)]"
       ]
      },
-     "execution_count": 58,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
